# graphics-programming

./: .gitignore  CMakeLists.txt  Graphics Programming.sln  Graphics Workbook.sln  README.md  first.cpp  graphics.props  second.cpp  third.cpp
Lesson 13/: Lesson 13.vcxproj.filters  stdafx.cpp
Lesson 13/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lesson 13.vcxprojResolveAssemblyReference.cache  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Render Framework/: README.txt  Render Framework.vcxproj  Render Framework.vcxproj.filters
Render Framework/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Render Framework.lastbuildstate  cl.command.1.tlog  lib.command.1.tlog
glfw/: LICENSE
glm/: CMakeLists.txt  test.cpp
lib/include/: Render Framework.vcxproj  Render Framework.vcxproj.filters
lib/include/render_framework/: camera.cpp  camera.h  content_manager.cpp  content_manager.h  effect.cpp  effect.h  frame_buffer.h  geometry.cpp  geometry.h  light.cpp  light.h  material.cpp  material.h  mesh.h  model.cpp  model.h  post_process.h  render_framework.h  scene.h  (+12 more)
resources/: Map__24_Composite.tga  Map__28_Falloff.tga  proplist.csv
src/: Atmosphere.frag  Atmosphere.vert  CSVparser.cpp  CSVparser.hpp  ClassDiagram.cd  Clouds.frag  ContentManager.cpp  Earth.cpp  Earth.frag  Earth.h  Earth.mtl  Earth.vert  Lesson 13.cpp  Lesson 13.vcxproj  Map__24_Composite.tga  Map__28_Falloff.tga  Moon.cpp  Moon.frag  Moon.h  Moon.mtl  Moon.vert  Prop.cpp  Prop.h  ReadMe.txt  Sol.cpp  Sol.frag  Sol.h  Sol.mtl  Sol.vert  Sputnik.cpp  Sputnik.h  Sputnik.mtl  Test.vcxproj  Test.vcxproj.filters  ambient.vert  blend.frag  camaremanager.cpp  cameramanager.cpp  cameramanager.h  cell.frag  (+33 more)
